packages/compiler/test/errors/temporal-dead-zone/destructuring-later-binding-default/code.js
function f() {
  const [a = b, b = 1] = [];
  return a + b;
}
